--- a/app/views/owners/show.erb
+++ b/app/views/owners/show.erb
@@ -1,7 +1,7 @@
 <h1><%=@owner.name%></h1>
 <h4>Pets:</h4>
 <ul>
-  <%@owner.pets.each do |pet|%>
-  <li><%=pet.name%></li>
+  <% @owner.pets.each do |pet|%>
+  <li><a href="/pets/<%=pet.id%>"><%=pet.name%></a></li>
   <%end%>
 </ul>
