--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,2 +1,20 @@
-<h1>Create a new Pet</h1>
+<h1>Create a New Pet</h1>
 
+<form action="/pets" method="post">
+  <label>Name: </label>
+  <input type="text" name="pet[name]" id="pet_name">
+  <br></br>
+  <label>Choose an existing owner: </label><br>
+  <%Owner.all.each do |owner|%>
+    <li>
+      <input type="radio" name="pet[owner_id]" value="<%=owner.id%>" id="<%=owner.id%>">
+      <%=owner.name%>
+    </li>
+  <%end%>
+  <br></br>
+  <label>or create a new owner:</label><br>
+  Name: <input type="text" name="owner[name]" id="owner_name">
+  <br></br>
+  <input type="submit" value="Create Pet">
+
+</form>
