--- a/app/views/owners/index.erb
+++ b/app/views/owners/index.erb
@@ -5,3 +5,8 @@
   <li><a href="/owners/<%=owner.id%>"><%=owner.name%></a></li>
 <%end%>
 </ol>
+<br><br>
+<a href="/owners/new"> Create a New Owner </a>
+<br><br>
+<a href="/pets"> Alternatively See List of Existing Pets </a>
+
