--- a/app/views/pets/show.erb
+++ b/app/views/pets/show.erb
@@ -1,16 +1,27 @@
 <h1><%=@pet.name%></h1>
 <h4>Owner:</h4>
-<ul><ul>
+<ul>
 
-  <li> <% if !@pet.owner.name %>
-  <%= No Owner currently %>
-else
-    <%= @pet.owner.name %> </li>
-  <% end %>
-
-
-<br><br>
+  <li> 
+    <%= 
+  
+if @pet.owner == nil
+    "This Pet is Ownerless"
+else 
+    @pet.owner.name
+end
+%> </li>
+</ul>
+<br>
 <form method="POST" action="/pets/<%=@pet.id%>">
     <input type="hidden" name="_method" value="DELETE"/>
     <input type="submit" value="Delete this pets page"/>
 </form>
+
+
+<br><br>
+<div>
+<a href="/owners"> Go back to list of Owners </a>
+<br><br>
+<a href="/pets"> Or see list of Existing Pets </a>
+</div>
