--- a/app/views/pets/index.erb
+++ b/app/views/pets/index.erb
@@ -5,3 +5,8 @@
   <li><a href="/pets/<%=pet.id%>"><%=pet.name%></a></li>
 <%end%>
 </ol>
+
+<br><br>
+<a href="/pets/new"> Create a New Pet </a>
+<br><br>
+<a href="/owners"> Alternatively See List of Owners </a>
