--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -2,15 +2,14 @@
 
 <h2>Edits for <%= @pet.name %></h2>
 
-<h2>Edits for <%= @pet.name %></h2>
-
   <form action="/pets/<%= @pet.id %>" method="POST">
     <input id="hidden" type="hidden" name="_method" value="patch">
     <label>Edit the Pet's Name:</label>
     <input type="text" name="pet[name]" id= "pet_name" value="<%= @pet.name %>">
 
     <br>
-    <p>Select an existing owner or create a new one below.</p>
+    <p>Select an existing owner or create a new one below. <br>
+    Please note that a new owner selection will replace the existing owner.</p>
 
 
     <h3>Existing Owners</h3>
