commit tree 0cecde1f71b992f41303ffa4dd1746681f9c319a

--- a/app/views/owners/show.erb
+++ b/app/views/owners/show.erb
@@ -2,7 +2,7 @@
 <h4>Pets:</h4>
 
 
-<%if @owner.pets.empty?%>
+<%if @owner.pets.empty?%>   <%##this works because in model, owner has many pets hence, the PETS array could be empty.%>
   <%="None. This owner has no pets"%>
   <%else%>
   <ul>
